# robot_rl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  amber_joint_log.csv  comparison_summary.csv  pyproject.toml
SURF_results/: 2025-07-22_15-55-42_5000.csv  2025-07-22_17-26-18_5000.csv  2025-07-22_17-26-18_5000_16.csv  2025-07-22_17-26-18_5000_16p5.csv  2025-07-22_17-26-18_5000_17.csv  2025-07-22_17-26-18_5000_17p5.csv  2025-07-22_17-26-18_5000_18.csv  2025-07-22_17-26-18_5000_18p5.csv  2025-07-22_17-26-18_5000_19.csv  2025-07-22_17-26-18_5000_19p5.csv  2025-07-22_17-26-18_5000_20.csv  2025-07-22_17-26-18_5000_20p5.csv  2025-07-22_17-26-18_5000_21.csv  2025-07-22_17-26-18_5000_21p5.csv  2025-07-22_17-26-18_5000_22.csv  2025-07-22_17-26-18_5000_22p5.csv  2025-07-22_17-26-18_5000_23.csv  2025-07-22_17-26-18_5000_24.csv  2025-07-22_17-26-18_5000_25.csv  2025-07-22_17-26-18_5000_26.csv  2025-07-22_17-26-18_5000_27.csv  2025-07-22_17-26-18_5000_30.csv  reward_plotting.asv  reward_plotting.m
SURF_results/RL/: Velocity_tracking.eps
SURF_results/model_data/: 2025-07-09_14-55-53_9999.csv  2025-07-22_15-55-42_1750.csv  2025-07-22_15-55-42_5000.csv  2025-07-22_17-26-18_5000_13.csv  2025-07-22_17-26-18_5000_13p5.csv  2025-07-22_17-26-18_5000_14.csv  2025-07-22_17-26-18_5000_14p5.csv  2025-07-22_17-26-18_5000_15.csv  2025-07-22_17-26-18_5000_15p5.csv
robot_assets/amber5/: amber (Copy).urdf
robot_assets/g1/: g1_21j_box.usd  g1_21j_knee_lim_sphere_contact.usd  g1_21j_self_col.usd  g1_21j_servo_backpack.usd  g1_21j_urdf_v3.usd  g1_21j_urdf_v3_M4.usd  g1_21j_urdf_v3_M4_mesh.usd  g1_21j_urdf_v3_min_contacts_M4.usd  g1_21j_urdf_v4_min_contacts.usd
scripts/: copy_from_mount.sh  mount_remote.sh  play.sh  random_agent.py  zero_agent.py
scripts/amber5/: add_amber.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: compare_tracking_error.py  convert_TSmodeltoACmodel.py  create_comparison_plots.py  evaluate_checkpoints.py  export_parameters.py  export_to_hardware.py  generate_summary.py  play.py  play_and_plot.py  play_policy.py  plot_summary_from_ckpt.py  plot_trajectories.py  run_play.py  run_sweep.py  train.py  train_policy.py  visualize_hiplot.py  visualize_policies.py  visualize_sweep.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play.py  train.py
source/robot_rl/: setup.py
transfer/: clf.py  g1_log_analysis.py  setup.py
transfer/Model_based/: amber_joint_log.csv  amber_joint_log3D.csv  amber_joint_log_ref.csv  amber_model_based.m  plot_curr_vs_req.m  threeD_plot.m
transfer/obelisk/robot_sim/: CMakeLists.txt
(+518 files in other folders)
